--- a/ubicaciones.html
+++ b/ubicaciones.html
@@ -79,7 +79,7 @@
     <div class="body-section-padding map-and-explanation margin-top">
 
       <div class="left container-49_5">
-        <iframe src="..." class="map"></iframe>
+        <iframe src="https://www.google.com/maps/d/embed?mid=1UYgCgqlTD1264txiQxa4qpLJoErm-jU&ehbc=2E312F" class="map"></iframe>
       </div>
 
       <div class="vertical-hr-container display-on-big">
