--- a/fotolibro.html
+++ b/fotolibro.html
@@ -31,10 +31,9 @@
             <div></div>
             <div>
                 <p><a href="index.html#galeria">GALERÍA</a></p>
-                <p><a href="libro.html">LIBRO</a></p>
+                <p><a href="fotolibro.html">FOTOLIBRO</a></p>
                 <p><a href="informacion.html">INFORMACIÓN</a></p>
                 <p><a href="ubicaciones.html">UBICACIONES</a></p>
-                <p><a href="agradecimientos.html">AGRADECIMIENTOS</a></p>
             </div>
             <div></div>
         </div>
@@ -50,13 +49,11 @@
                     <p>
                         <a href="index.html#galeria">GALERÍA</a>
                         &nbsp;
-                        <a href="libro.html">LIBRO</a>
+                        <a href="fotolibro.html">FOTOLIBRO</a>
                         &nbsp;
                         <a href="informacion.html">INFORMACIÓN</a>
                         &nbsp;
                         <a href="ubicaciones.html">UBICACIONES</a>
-                        &nbsp;
-                        <a href="agradecimientos.html">AGRADECIMIENTOS</a>
                     </p>
                 </div>
             </header>
@@ -95,6 +92,7 @@
 
     <footer>
         <p>
+            AGRADECIMIENTOS<br><br>
             &copy;&nbsp;MANUEL ESTÉVEZ MURADO 2023
         </p>
     </footer>
