--- a/galeria/naturaleza_invasora.html
+++ b/galeria/naturaleza_invasora.html
@@ -30,10 +30,9 @@
     <div></div>
     <div>
       <p><a href="../index.html#galeria">GALERÍA</a></p>
-      <p><a href="../libro.html">LIBRO</a></p>
+      <p><a href="../fotolibro.html">FOTOLIBRO</a></p>
       <p><a href="../informacion.html">INFORMACIÓN</a></p>
       <p><a href="../ubicaciones.html">UBICACIONES</a></p>
-      <p><a href="../agradecimientos.html">AGRADECIMIENTOS</a></p>
     </div>
     <div></div>
   </div>
@@ -49,13 +48,11 @@
         <p>
           <a href="../index.html#galeria">GALERÍA</a>
           &nbsp;
-          <a href="../libro.html">LIBRO</a>
+          <a href="../fotolibro.html">FOTOLIBRO</a>
           &nbsp;
           <a href="../informacion.html">INFORMACIÓN</a>
           &nbsp;
           <a href="../ubicaciones.html">UBICACIONES</a>
-          &nbsp;
-          <a href="../agradecimientos.html">AGRADECIMIENTOS</a>
         </p>
       </div>
     </header>
@@ -87,7 +84,8 @@
 
 <footer>
   <p>
-    &copy;&nbsp;MANUEL ESTÉVEZ MURADO 2023
+    AGRADECIMIENTOS<br><br>
+            &copy;&nbsp;MANUEL ESTÉVEZ MURADO 2023
   </p>
 </footer>
 
