Updated header: galeria to fotografias

--- a/fotolibro.html
+++ b/fotolibro.html
@@ -30,7 +30,7 @@
             <script src="scripts/navigation.js"></script>
             <div></div>
             <div>
-                <p><a href="index.html#galeria">GALERÍA</a></p>
+                <p><a href="index.html#fotografias">FOTOGRAFÍAS</a></p>
                 <p><a href="fotolibro.html">FOTOLIBRO</a></p>
                 <p><a href="informacion.html">INFORMACIÓN</a></p>
                 <p><a href="ubicaciones.html">UBICACIONES</a></p>
@@ -47,7 +47,7 @@
                 </div>
                 <div class="header-links">
                     <p>
-                        <a href="index.html#galeria">GALERÍA</a>
+                        <a href="index.html#fotografias">FOTOGRAFÍAS</a>
                         &nbsp;
                         <a href="fotolibro.html">FOTOLIBRO</a>
                         &nbsp;
