--- a/galeria/interiores.html
+++ b/galeria/interiores.html
@@ -5,13 +5,13 @@
 <!-- TODO: EDITAR -->
 <head>
   <!-- TODO: EDITAR -->
-  <title>INTERIORES / GALERÍA / MANUEL ESTEVEZ MURADO</title>
+  <title>INTERIORES / FOTOGRAFÍAS / MANUEL ESTEVEZ MURADO</title>
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Joaquín Solla Vázquez, Manuel Estévez Murado">
   <!-- TODO: EDITAR -->
-  <meta name="description" content="Manuel Estévez Murado: Galería: Interiores">
+  <meta name="description" content="Manuel Estévez Murado: Fotografías: Interiores">
   <!-- TODO: EDITAR -->
   <meta name="keywords" content="...">
 
@@ -29,7 +29,7 @@
     <script src="../scripts/navigation.js"></script>
     <div></div>
     <div>
-      <p><a href="../index.html#galeria">GALERÍA</a></p>
+      <p><a href="../index.html#fotografias">FOTOGRAFÍAS</a></p>
       <p><a href="../fotolibro.html">FOTOLIBRO</a></p>
       <p><a href="../informacion.html">INFORMACIÓN</a></p>
       <p><a href="../ubicaciones.html">UBICACIONES</a></p>
@@ -46,7 +46,7 @@
       </div>
       <div class="header-links">
         <p>
-          <a href="../index.html#galeria">GALERÍA</a>
+          <a href="../index.html#fotografias">FOTOGRAFÍAS</a>
           &nbsp;
           <a href="../fotolibro.html">FOTOLIBRO</a>
           &nbsp;
