--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <script src="scripts/navigation.js"></script>
             <div></div>
             <div>
-                <p><a href="index.html#galeria">GALERÍA</a></p>
+                <p><a href="index.html#fotografias">FOTOGRAFÍAS</a></p>
                 <p><a href="fotolibro.html">FOTOLIBRO</a></p>
                 <p><a href="informacion.html">INFORMACIÓN</a></p>
                 <p><a href="ubicaciones.html">UBICACIONES</a></p>
@@ -48,7 +48,7 @@
                     </div>
                     <div class="header-links">
                         <p>
-                            <a href="index.html#galeria">GALERÍA</a>
+                            <a href="index.html#fotografias">FOTOGRAFÍAS</a>
                             &nbsp;
                             <a href="fotolibro.html">FOTOLIBRO</a>
                             &nbsp;
@@ -78,7 +78,7 @@
             <div class="index-home-swipe-button">
                 <script>
                     function scrollToIntro(){
-                        const targetElement = document.querySelector('#galeria');
+                        const targetElement = document.querySelector('#fotografias');
                         const targetPosition = targetElement.offsetTop;
                         const startPosition = window.pageYOffset;
                         const distance = targetPosition - startPosition;
@@ -104,14 +104,14 @@
                     }
                 </script>
                 <a style="cursor: pointer" onclick="scrollToIntro()">
-                    <p style="user-select: none; font-size: 1.25rem; font-style: italic">Desliza para ver la galería<br>
+                    <p style="user-select: none; font-size: 1.25rem; font-style: italic">Desliza para ver las fotografías<br>
                         <i class="fa fa-angle-double-down" style="animation: bounce 2.5s infinite;"></i>
                     </p>
                 </a>
             </div>
         </div>
 
-        <div id="galeria" class="index-galleries body-section-padding">
+        <div id="fotografias" class="index-galleries body-section-padding">
 
             <div class="index-galleries-wrap">
 
