--- a/galeria/aerea.html
+++ b/galeria/aerea.html
@@ -5,13 +5,13 @@
 <!-- TODO: EDITAR -->
 <head>
   <!-- TODO: EDITAR -->
-  <title>AÉREA / GALERÍA / MANUEL ESTEVEZ MURADO</title>
+  <title>AÉREA / FOTOGRAFÍAS / MANUEL ESTEVEZ MURADO</title>
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Joaquín Solla Vázquez, Manuel Estévez Murado">
   <!-- TODO: EDITAR -->
-  <meta name="description" content="Manuel Estévez Murado: Galería: Aérea">
+  <meta name="description" content="Manuel Estévez Murado: Fotografías: Aérea">
   <!-- TODO: EDITAR -->
   <meta name="keywords" content="...">
 
@@ -30,7 +30,7 @@
       <script src="../scripts/navigation.js"></script>
       <div></div>
       <div>
-        <p><a href="../index.html#galeria">GALERÍA</a></p>
+        <p><a href="../index.html#fotografias">FOTOGRAFÍAS</a></p>
         <p><a href="../fotolibro.html">FOTOLIBRO</a></p>
         <p><a href="../informacion.html">INFORMACIÓN</a></p>
         <p><a href="../ubicaciones.html">UBICACIONES</a></p>
@@ -47,7 +47,7 @@
         </div>
         <div class="header-links">
           <p>
-            <a href="../index.html#galeria">GALERÍA</a>
+            <a href="../index.html#fotografias">FOTOGRAFÍAS</a>
             &nbsp;
             <a href="../fotolibro.html">FOTOLIBRO</a>
             &nbsp;
