--- a/ubicaciones.html
+++ b/ubicaciones.html
@@ -29,7 +29,7 @@
       <script src="scripts/navigation.js"></script>
       <div></div>
       <div>
-        <p><a href="index.html#galeria">GALERÍA</a></p>
+        <p><a href="index.html#fotografias">FOTOGRAFÍAS</a></p>
         <p><a href="fotolibro.html">FOTOLIBRO</a></p>
         <p><a href="informacion.html">INFORMACIÓN</a></p>
         <p><a href="ubicaciones.html">UBICACIONES</a></p>
@@ -46,7 +46,7 @@
         </div>
         <div class="header-links">
           <p>
-            <a href="index.html#galeria">GALERÍA</a>
+            <a href="index.html#fotografias">FOTOGRAFÍAS</a>
             &nbsp;
             <a href="fotolibro.html">FOTOLIBRO</a>
             &nbsp;
