Added contacto page. Updated header.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <p><a href="fotolibro.html">FOTOLIBRO</a></p>
                 <p><a href="informacion.html">INFORMACIÓN</a></p>
                 <p><a href="ubicaciones.html">UBICACIONES</a></p>
+                <p><a href="contacto.html">CONTACTO</a></p>
             </div>
             <div></div>
         </div>
@@ -55,6 +56,8 @@
                             <a href="informacion.html">INFORMACIÓN</a>
                             &nbsp;
                             <a href="ubicaciones.html">UBICACIONES</a>
+                            &nbsp;
+                            <a href="contacto.html">CONTACTO</a>
                         </p>
                     </div>
                 </header>
