Set up all galleries

--- a/galeria/graffitis.html
+++ b/galeria/graffitis.html
@@ -84,7 +84,7 @@
 
   <div class="body-section-padding margin-top">
 
-    <h1 style="text-align: center; margin: 30px 0 30px 0">Aérea</h1>
+    <h1 style="text-align: center; margin: 30px 0 30px 0">Graffitis</h1>
 
     <div id="gallery-wrap" class="gallery-wrap"></div>
     <div id="modal" class="modal">
@@ -94,54 +94,61 @@
     </div>
 
     <script>
-      const originalRoute = "../assets/original/geometria/";
-      const thumbnailRoute = "../assets/thumbnail/geometria/";
+      const originalRoute = "../assets/original/graffitis/";
+      const thumbnailRoute = "../assets/thumbnail/graffitis/";
 
       let originalImages = [
-        originalRoute + "DSCF0378-HDR.webp",
-        originalRoute + "DSCF0396.webp",
-        originalRoute + "DSCF0415-HDR.webp",
-        originalRoute + "DSCF0676.webp",
-        originalRoute + "DSCF0755.webp",
-        originalRoute + "DSCF0780.webp",
-        originalRoute + "DSCF0782.webp",
-        originalRoute + "DSCF0786.webp",
-        originalRoute + "DSCF0879.webp",
-        originalRoute + "DSCF1029.webp",
-        originalRoute + "DSCF1162.webp",
-        originalRoute + "DSCF1336.webp",
-        originalRoute + "DSCF1344.webp",
-        originalRoute + "DSCF1348.webp",
-        originalRoute + "DSCF1368.webp",
-        originalRoute + "DSCF1374.webp",
-        originalRoute + "DSCF3372.webp",
-        originalRoute + "DSCF3606.webp",
-        originalRoute + "DSCF9206.webp",
-        originalRoute + "DSCF9507.webp",
+        originalRoute + "DSCF0408.webp",
+        originalRoute + "DSCF0430-HDR.webp",
+        originalRoute + "DSCF0434.webp",
+        originalRoute + "DSCF0436.webp",
+        originalRoute + "DSCF0441.webp",
+        originalRoute + "DSCF0447.webp",
+        originalRoute + "DSCF0448.webp",
+        originalRoute + "DSCF0746.webp",
+        originalRoute + "DSCF0749.webp",
+        originalRoute + "DSCF1164.webp",
+        originalRoute + "DSCF1304.webp",
+        originalRoute + "DSCF1339.webp",
+        originalRoute + "DSCF1376.webp",
+        originalRoute + "DSCF3460.webp",
+        originalRoute + "DSCF3532.webp",
+        originalRoute + "DSCF3542.webp",
+        originalRoute + "DSCF3559.webp",
+        originalRoute + "DSCF3560.webp",
+        originalRoute + "DSCF3567.webp",
+        originalRoute + "DSCF3571.webp",
+        originalRoute + "DSCF3574.webp",
+        originalRoute + "DSCF9269.webp",
+        originalRoute + "DSCF9746.webp",
+        originalRoute + "DSCF9846.webp",
       ];
 
       let thumbnailImages = [
-        thumbnailRoute + "DSCF0378-HDR.webp",
-        thumbnailRoute + "DSCF0396.webp",
-        thumbnailRoute + "DSCF0415-HDR.webp",
-        thumbnailRoute + "DSCF0676.webp",
-        thumbnailRoute + "DSCF0755.webp",
-        thumbnailRoute + "DSCF0780.webp",
-        thumbnailRoute + "DSCF0782.webp",
-        thumbnailRoute + "DSCF0786.webp",
-        thumbnailRoute + "DSCF0879.webp",
-        thumbnailRoute + "DSCF1029.webp",
-        thumbnailRoute + "DSCF1162.webp",
-        thumbnailRoute + "DSCF1336.webp",
-        thumbnailRoute + "DSCF1344.webp",
-        thumbnailRoute + "DSCF1348.webp",
-        thumbnailRoute + "DSCF1368.webp",
-        thumbnailRoute + "DSCF1374.webp",
-        thumbnailRoute + "DSCF3372.webp",
-        thumbnailRoute + "DSCF3606.webp",
-        thumbnailRoute + "DSCF9206.webp",
-        thumbnailRoute + "DSCF9507.webp",
-        "keep"
+        thumbnailRoute + "DSCF0408.webp",
+        thumbnailRoute + "DSCF0430-HDR.webp",
+        thumbnailRoute + "DSCF0434.webp",
+        thumbnailRoute + "DSCF0436.webp",
+        thumbnailRoute + "DSCF0441.webp",
+        thumbnailRoute + "DSCF0447.webp",
+        thumbnailRoute + "DSCF0448.webp",
+        thumbnailRoute + "DSCF0746.webp",
+        thumbnailRoute + "DSCF0749.webp",
+        thumbnailRoute + "DSCF1164.webp",
+        thumbnailRoute + "DSCF1304.webp",
+        thumbnailRoute + "DSCF1339.webp",
+        thumbnailRoute + "DSCF1376.webp",
+        thumbnailRoute + "DSCF3460.webp",
+        thumbnailRoute + "DSCF3532.webp",
+        thumbnailRoute + "DSCF3542.webp",
+        thumbnailRoute + "DSCF3559.webp",
+        thumbnailRoute + "DSCF3560.webp",
+        thumbnailRoute + "DSCF3567.webp",
+        thumbnailRoute + "DSCF3571.webp",
+        thumbnailRoute + "DSCF3574.webp",
+        thumbnailRoute + "DSCF9269.webp",
+        thumbnailRoute + "DSCF9746.webp",
+        thumbnailRoute + "DSCF9846.webp",
       ];
 
       const galleryWrap = document.getElementById("gallery-wrap");
