--- a/galeria/grandes_construcciones.html
+++ b/galeria/grandes_construcciones.html
@@ -84,7 +84,7 @@
 
   <div class="body-section-padding margin-top">
 
-    <h1 style="text-align: center; margin: 30px 0 30px 0">Aérea</h1>
+    <h1 style="text-align: center; margin: 30px 0 30px 0">Grandes construcciones</h1>
 
     <div id="gallery-wrap" class="gallery-wrap"></div>
     <div id="modal" class="modal">
@@ -94,51 +94,41 @@
     </div>
 
     <script>
-      const originalRoute = "../assets/original/aerea/";
-      const thumbnailRoute = "../assets/thumbnail/aerea/";
+      const originalRoute = "../assets/original/grandes_construcciones/";
+      const thumbnailRoute = "../assets/thumbnail/grandes_construcciones/";
 
       let originalImages = [
-        originalRoute + "DJI_0078.webp",
-        originalRoute + "DJI_0098.webp",
-        originalRoute + "DJI_0108.webp",
-        originalRoute + "DJI_0123.webp",
-        originalRoute + "DJI_0127.webp",
-        originalRoute + "DJI_0129.webp",
-        originalRoute + "DJI_0160.webp",
-        originalRoute + "DJI_0168.webp",
-        originalRoute + "DJI_0169.webp",
-        originalRoute + "DJI_0173.webp",
-        originalRoute + "DJI_0174.webp",
-        originalRoute + "DJI_0177.webp",
-        originalRoute + "DJI_0178.webp",
-        originalRoute + "DJI_0179.webp",
-        originalRoute + "DJI_0184.webp",
-        originalRoute + "DJI_0185.webp",
-        originalRoute + "DJI_0188.webp",
-        originalRoute + "DJI_0196.webp",
-        originalRoute + "DJI_0199.webp",
+        originalRoute + "DJI_0062.webp",
+        originalRoute + "DSCF0799.webp",
+        originalRoute + "DSCF0808.webp",
+        originalRoute + "DSCF0845.webp",
+        originalRoute + "DSCF0850.webp",
+        originalRoute + "DSCF0871.webp",
+        originalRoute + "DSCF0884.webp",
+        originalRoute + "DSCF0885.webp",
+        originalRoute + "DSCF0897.webp",
+        originalRoute + "DSCF0901.webp",
+        originalRoute + "DSCF1141.webp",
+        originalRoute + "DSCF1318.webp",
+        originalRoute + "DSCF1412.webp",
       ];
 
       let thumbnailImages = [
-        thumbnailRoute + "DJI_0078.webp",
-        thumbnailRoute + "DJI_0098.webp",
-        thumbnailRoute + "DJI_0108.webp",
-        thumbnailRoute + "DJI_0123.webp",
-        thumbnailRoute + "DJI_0127.webp",
-        thumbnailRoute + "DJI_0129.webp",
-        thumbnailRoute + "DJI_0160.webp",
-        thumbnailRoute + "DJI_0168.webp",
-        thumbnailRoute + "DJI_0169.webp",
-        thumbnailRoute + "DJI_0173.webp",
-        thumbnailRoute + "DJI_0174.webp",
-        thumbnailRoute + "DJI_0177.webp",
-        thumbnailRoute + "DJI_0178.webp",
-        thumbnailRoute + "DJI_0179.webp",
-        thumbnailRoute + "DJI_0184.webp",
-        thumbnailRoute + "DJI_0185.webp",
-        thumbnailRoute + "DJI_0188.webp",
-        thumbnailRoute + "DJI_0196.webp",
-        thumbnailRoute + "DJI_0199.webp",
+        thumbnailRoute + "DJI_0062.webp",
+        thumbnailRoute + "DSCF0799.webp",
+        thumbnailRoute + "DSCF0808.webp",
+        thumbnailRoute + "DSCF0845.webp",
+        thumbnailRoute + "DSCF0850.webp",
+        thumbnailRoute + "DSCF0871.webp",
+        thumbnailRoute + "DSCF0884.webp",
+        thumbnailRoute + "DSCF0885.webp",
+        thumbnailRoute + "DSCF0897.webp",
+        thumbnailRoute + "DSCF0901.webp",
+        thumbnailRoute + "DSCF1141.webp",
+        thumbnailRoute + "DSCF1318.webp",
+        thumbnailRoute + "DSCF1412.webp",
+        "keep",
+        "keep",
       ];
 
       const galleryWrap = document.getElementById("gallery-wrap");
@@ -150,7 +140,7 @@
         img.alt = "";
         img.loading = "lazy";
 
-        img.onclick = (function(index) {
+        if (img.dataset.src !== "keep") img.onclick = (function(index) {
           return function() {
             let modal = document.getElementById("modal");
             let modalImg = document.getElementById("modalImage");
