Configured user-select options. Updated map.

--- a/fotolibro.html
+++ b/fotolibro.html
@@ -24,6 +24,12 @@
 
 <body>
 
+<script>
+    document.addEventListener("contextmenu", function(e) {
+        e.preventDefault();
+    });
+</script>
+
     <div class="header-and-content">
 
         <div id="navigation" style="display: none">
