--- a/ubicaciones.html
+++ b/ubicaciones.html
@@ -24,6 +24,12 @@
 
 <body>
 
+<script>
+  document.addEventListener("contextmenu", function(e) {
+    e.preventDefault();
+  });
+</script>
+
   <div class="header-and-content">
     <div id="navigation" style="display: none">
       <script src="scripts/navigation.js"></script>
@@ -102,7 +108,7 @@
         </p>
         <br>
         <div class="center no-select">
-          <a href="https://www.google.com/maps/d/u/0/viewer?mid=1cuR78Kml1qJvIXkcUoRvBM2sFSZzCYM&ll=42.403969921375925%2C-8.541887299684605&z=17" target="_blank">
+          <a href="https://www.google.com/maps/d/u/0/viewer?mid=1UYgCgqlTD1264txiQxa4qpLJoErm-jU&ll=42.349057261778455%2C-8.684724432416811&z=11" target="_blank">
             <button>
               <i class="fa fa-external-link"></i>&nbsp;ABRIR EN GOOGLE MAPS
             </button>
