Implemented new fotolibro

--- a/fotolibro.html
+++ b/fotolibro.html
@@ -86,7 +86,9 @@
         <div class="body-section-padding margin-top">
             <p id="turn-device-message"><i class="fa fa-rotate-left"></i>&nbsp;Rota tu dispositivo para una mejor experiencia.</p>
             <div class="book-container margin-top">
-                <iframe id="book" width="100%" height="100%" src="https://www.yumpu.com/xx/embed/view/GhiQ46E1aL90FjbP" frameborder="0" allowfullscreen="true"  allowtransparency="true"></iframe><br><a href="https://www.yumpu.com/xx/document/view/68111143/libro" title="libro" target="_blank"></a>
+
+                <iframe style="width:100%;height:100%" src="https://online.fliphtml5.com/yoelk/nknz/"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe>
+
             </div>
             <div class="hr-container">
                 <hr>
